tests/expected_invalid_public_record_private_field_type.diag.out
<input>:7:19: error: public API cannot reference private type 'Hidden'
        public value: Hidden,
                      ^^^^^^
